<resources>
    <string name="app_name">Project3_exploring_leayouts</string>
    <string name="menu">Menu</string>
    <string name="select_a_layout_type_to_view_an_example_the_onclick_attribute_of_each_button_will_call_a_method_which_executes_setcontentview_to_load_the_new_layout">Select a layout type to view an example. The onClick attribute of each button will call a method which executes setContentView to load the new layout.</string>
    <string name="load">LOAD</string>
    <string name="load_constraint_layout">Load Constraint Layout</string>
    <string name="load_table_layout">Load Table Layout</string>
    <string name="load2">LOAD</string>
    <string name="back_to_the_menu">Back to the menu</string>
    <string name="india">India</string>
    <string name="england">England</string>
    <string name="_1st">1st</string>
    <string name="_2nd">2nd</string>
    <string name="_111">111</string>
    <string name="_222">222</string>
    <string name="_333">333</string>
    <string name="_444">444</string>
</resources>
